--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <title>Sneaker Head</title>
         <!-- Link your CSS HERE -->
+        <link rel="stylesheet" href=style.css>
 
 
 
@@ -13,7 +14,7 @@
         <div id="row1">
             <div id="row1-section1">
                 <!-- JORDAN 1 IMAGE HERE -->
-
+<img srcheight=400px width=600px id="jordans-1">
 
 
             </div>
